--- a/bragsheet.html
+++ b/bragsheet.html
@@ -102,6 +102,7 @@
 		}
 
 		.button1 {
+		  border-radius: 25px;
 		  background-color: white; 
 		  color: black; 
 		  border: 2px solid #3a6791;
