--- a/bragsheet.html
+++ b/bragsheet.html
@@ -286,7 +286,9 @@
 		  	border: 2px solid navajowhite;
 		}
 
-		.fa {font-size:50px;}
+		.fa {
+			font-size:50px;
+		}
 
 		.tooltip {
 		  position: relative;
@@ -364,7 +366,7 @@
 					<a class= "tooltip">
 						<span class="tooltiptext">Duties and Responsibilities</span>
 						<div class="card">
-				      		<p><i class="fa fa-briefcase"></i></p>
+				      		<p><i class="fa fa-briefcase" style="font-size: 35px"></i></p>
 				      		<h3 id="counter_0">0</h3>
 			    		</div>
 			    	</a>
@@ -375,7 +377,7 @@
 	  				<a class= "tooltip">
 						<span class="tooltiptext">Job Accomplishments and Initiative</span>
 	    				<div class="card">
-	      					<p><i class="fa fa-certificate"></i></p>
+	      					<p><i class="fa fa-certificate" style="font-size: 35px"></i></p>
 	      					<h3 id="counter_1">0</h3>
 	    				</div>
 	    			</a>
@@ -386,7 +388,7 @@
 	  				<a class= "tooltip">
 						<span class="tooltiptext">Supervision and Leadership</span>
 	    				<div class="card">
-		      				<p><i class="fa fa-users"></i></p>
+		      				<p><i class="fa fa-users" style="font-size: 35px"></i></p>
 		      				<h3 id="counter_2">0</h3>
 	    				</div>
 	   	 			</a>
@@ -397,7 +399,7 @@
 	    			<a class= "tooltip">
 						<span class="tooltiptext">Special Achievements</span>
 	    				<div class="card">
-			    			<p><i class="fa fa-trophy"></i></p>
+			    			<p><i class="fa fa-trophy" style="font-size: 35px"></i></p>
 			    			<h3 id="counter_3">0</h3>
 	    				</div>
 	    			</a>
@@ -408,7 +410,7 @@
 	    			<a class= "tooltip">
 						<span class="tooltiptext">Off-Duty Activities</span>
 	    				<div class="card">
-	      					<p><i class="fa fa-plus"></i></p>
+	      					<p><i class="fa fa-plus" style="font-size: 35px"></i></p>
 	      					<h3 id="counter_4">0</h3>
 	    				</div>
 	    			</a>
@@ -419,7 +421,7 @@
 	    			<a class= "tooltip">
 						<span class="tooltiptext">Collateral Duties</span>
 	    				<div class="card">
-			    			<p><i class="fa fa-tasks"></i></p>
+			    			<p><i class="fa fa-tasks" style="font-size: 35px"></i></p>
 			    			<h3 id="counter_5">0</h3>	    
 	    				</div>
 	    			</a>
@@ -430,7 +432,7 @@
 	    			<a class= "tooltip">
 						<span class="tooltiptext">Education (Navy, Personal)</span>
 	    					<div class="card">
-		      					<p><i class="fa fa-book"></i></p>
+		      					<p><i class="fa fa-book" style="font-size: 35px"></i></p>
 		      					<h3 id="counter_6">0</h3>
 	    					</div>
 	    			</a>
@@ -441,7 +443,7 @@
 	  				<a class= "tooltip">
 						<span class="tooltiptext">Qualifications</span>
 	    				<div class="card">
-		      				<p><i class="fa fa-check-square"></i></p>
+		      				<p><i class="fa fa-check-square" style="font-size: 35px"></i></p>
 		      				<h3 id="counter_7">0</h3>
 	    				</div>
 	    			</a>
