--- a/bragsheet.html
+++ b/bragsheet.html
@@ -1093,7 +1093,7 @@
 
 			this.fullName = fullName_;
 			
-			if (this.fullName != null && this.fullName != "First Last, M")
+			if (this.fullName != null && this.fullName != "Last, First M")
 			{
 				this.designators = prompt('Enter rate and warfare/qualification designators.', 'Ex. IT2(IW)');
 
