--- a/bragsheet.html
+++ b/bragsheet.html
@@ -1089,7 +1089,7 @@
 			 * 
 			 * */
 			 
-			let fullName_ = prompt('Enter your full name.', 'First Last, M');
+			let fullName_ = prompt('Enter your full name.', 'Last, First M');
 
 			this.fullName = fullName_;
 			
