--- a/bragsheet.html
+++ b/bragsheet.html
@@ -1054,7 +1054,7 @@
 					document.getElementById('end_day').value = rec.endDate.day;
 					document.getElementById('end_month').value = rec.endDate.month;
 					document.getElementById('end_year').value = rec.endDate.year;
-					document.getElementById('impact').selectedIndex = impact[rec.impact];
+					document.getElementById('impact').selectedIndex = impact.indexOf[rec.impact];
 					document.getElementById('category').selectedIndex = categories.indexOf(rec.Category);
 					document.getElementById('content_pane').value = rec.Content;
 
